# eeg-bachelor

./: .gitignore  01_make_epochs.py  Makefile  README.md  commands.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
eeg/: dataset.py  features.py  plots.py
eeg/modeling/: predict.py  train.py
eeg_old/: __init__.py  dataset.py  features.py  plots.py
eeg_old/modeling/: predict.py  train.py
notebooks/: 00_inspect_edf.html  00_inspect_edf.ipynb  inspection_of_preprocessed_data.ipynb
reports/reduce/alpha/: run_config.json  wsmi_epoch_scalars.csv  wsmi_summary.json
reports/wsmi/alpha/: run_config.json
scripts/: run_all_bands.py  wsmi_compute.py  wsmi_qc_plots.py  wsmi_reduce.py
src/eeg/wsmi/: aggregation.py  compute.py  filters.py  symbolic.py
