[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eeg"
version = "0.0.1"
description = "EEG/ML analysis with MNE"
authors = [
  { name = "Bj\u00f8rn Sch\u00f8nbech M\u00f8ller" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.12,<3.13"


[tool.ruff]
line-length = 99
src = ["eeg"]
include = ["pyproject.toml", "eeg/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["eeg"]
force-sort-within-sections = true

